# dbacl

./: .gitignore  AUTHORS  ChangeLog  Makefile.in  NEWS  README  acinclude.m4  configure  configure.in
TREC/: Makefile.in  OPTIONS  OPTIONS.TREC2005.4adp  OPTIONS.adp-dir-d  OPTIONS.adp-u-d  OPTIONS.adp-unif-d  OPTIONS.bi-adp-unif-d  OPTIONS.bi-simple-d  OPTIONS.cef-dir-d  OPTIONS.cef-unif-d  OPTIONS.puretext-d  OPTIONS.simple-d  OPTIONS.simple-v  README  SFX  TREC2005.txt  audit-graph  audit-scores  basic-email  checkpoint  classify  finalize  initialize  restart  train  verify-stderr
contrib/: Makefile.in  README
doc/: Makefile.in  costs.ps  dbacl.ps  email.html  example1.risk  example2.risk  example3.risk  is_it_working.html  japanese.txt  prop.pl  sample1.txt  sample2.txt  sample3.txt  sample4.txt  sample5.txt  sample6.txt  spam_chess.html  toy.risk  tutorial.html
doc/chess/: Makefile.in  combine_half_moves.sh  dce-1.sh  dce-2.sh  dce-3.sh  dce-basic.sh  dce.sh  randomizer.awk  renorm.awk
man/: Makefile.in  bayesol.1in  dbacl.1in  hmine.1in  hypex.1in  mailcross.1in  mailfoot.1in  mailinspect.1in  mailtoe.1in  spherecl.1in
src/: Makefile.in  README  TODO  bayesol.c  bayesol.h  catfun.c  config.h.in  dbacl.c  dbacl.h  fh.c  fram.c  hmine.c  hmine.h  hparse.c  hypex.c  hypex.h  icheck.c  jenkins.c  lint-check.sh  mailcross.in  mailfoot.in  mailinspect.c  mailinspect.h  mailtest.functions.in  mailtoe.in  mbw.c  mbw.h  ndtr.c  plot-scores.sh  probs.c  rfc2822.c  rfc822.c  risk-lexer.c  risk-lexer.l  risk-parser.c  risk-parser.h  risk-parser.y  splintrc  util.c  util.h
src/tests/: Makefile.in  bayesol-V.shin  class-unknown1.shin  class-unknown2.shin  dbacl-O.shin  dbacl-V.shin  dbacl-a.shin  dbacl-adp.shin  dbacl-alnum.shin  dbacl-alpha.shin  dbacl-cef.shin  dbacl-cef2.shin  dbacl-g.shin  dbacl-graph.shin  dbacl-j.shin  dbacl-jap.shin  dbacl-l.shin  dbacl-o.shin  dbacl-w3.shin  dbacl-z.shin  dbacl-zo.shin  email-2047.shin  email-badmime1.shin  email-badmime2.shin  email-forms.shin  email-headers.shin  email-l.shin  email-maildir.shin  email-mbox.shin  email-pgp.shin  email-scripts.shin  email-style.shin  email-theaders.shin  email-uri.shin  email-uu.shin  email-xheaders.shin  html-alt.shin  html-links.shin  html.shin  icheck.shin  (+50 more)
ts/: Makefile.in  annoyance-filter  antispam  bmf  bogofilterA  crm114A  crm114B  dbaclA  dbaclB  dbaclC  dbaclL  ifile  popfile  qsf  spamassassin  spambayes  spamoracle  spamprobe
